syntax="proto3";

package metadata.v1;

option go_package = "github.com/ouiasy/microservice-go/api/gen/go";

service MetadataService {
  rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse);
  rpc PutMetadata(PutMetadataRequest) returns (PutMetadataResponse);
}

message Metadata {
  string id = 1;
  string title = 2;
  string description = 3;
  string director = 4;
}

message GetMetadataRequest {
  string movie_id = 1;
}

message GetMetadataResponse {
  Metadata metadata = 1;
}

message PutMetadataRequest {
  Metadata metadata = 1;
}

message PutMetadataResponse {
  string metadata_id = 1;
}


